# ldf

./: CMakeLists.txt  Dockerfile  compile_flags.txt  kurac.md
proposal/: design.md
proposal/include/ldf/: fmt_encoder.hpp  layout_optimizer.hpp  ldf.hpp  type_info.hpp
source/: arch.hpp  decode.hpp  encode.hpp  eval.hpp  format.hpp  helpers.hpp  meta.hpp  metadata.hpp  parser.hpp  sstring.hpp
test/: CMakeLists.txt  Makefile  main  main.cpp  main.dis  test_fmt_encoder.cpp  test_layout_optimizer.cpp  test_metadata.cpp  test_type_info.cpp
